# fitmetersync

./: .gitignore  3ds_cross.txt  DOCUMENTATION.md  Doxyfile  Makefile  README.md  fitmetersync.3dsx  ipaddress.txt.example  meson.build
.github/ISSUE_TEMPLATE/: fit-meter-data.md
fms-3ds/: meson.build
fms-3ds/src/: link.cpp  link.h  main.cpp  reserver.cpp  reserver.h  tsdeque.cpp  tsdeque.h
fms-cli/: README.md  meson.build
fms-cli/src/: command_common.cpp  command_common.h  command_dump.cpp  command_retrieve.cpp  main.cpp
libfms/: Doxyfile  meson.build
libfms/src/: pcap.cpp  pcap.h
libfms/src/core/: crc.cpp  crc.h  debug.h  types.h
libfms/src/platform/: condvar.h  iradapter.h  iradaptermanager.cpp  iradaptermanager.h  lock.cpp  lock.h  mutex.h  platform.dox  thread.h
libfms/src/platform/ctru/: condvar.cpp  condvar.h  ctru.dox  iradapter.cpp  iradapter.inl  iradaptermanager.cpp  iradaptermanager.h  mutex.cpp  mutex.h  thread.cpp  thread.h
libfms/src/platform/linux/: condvar.cpp  condvar.h  iradapter.cpp  iradapter.inl  iradaptermanager.cpp  iradaptermanager.h  linux.dox  mutex.cpp  mutex.h  thread.cpp  thread.h
libfms/src/protocol/: link.cpp  link.h  link.inl
misc/: README.md  reclient.py  wiifitmeter.lua
src/: crc.cpp  crc.h  debug.h  link.cpp  link.h  main.cpp  pcap.cpp  pcap.h  reserver.cpp  reserver.h  tsdeque.cpp  tsdeque.h  wiiulink.cpp  wiiulink.h
src/platform/: condvar.h  lock.cpp  lock.h  mutex.h  thread.h
src/platform/ctru/: condvar.cpp  condvar.h  mutex.cpp  mutex.h  thread.cpp  thread.h
testing/: fms-1551470126.txt  fms-1554586116.pcap  handshake-henk-reply-same.  handshake-henk-reply-same.bin.md
